fix expand and collapse icons styling

--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineCollapser.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineCollapser.css
@@ -43,7 +43,6 @@ limitations under the License.
   transform: rotate(90deg);
 }
 
-.TimelineCollapser--btn-expand,
-.TimelineCollapser--btn {
+.TimelineCollapser--btn-size {
   font-size: 20px;
 }
