--- a/packages/jaeger-ui/src/components/common/NewWindowIcon.css
+++ b/packages/jaeger-ui/src/components/common/NewWindowIcon.css
@@ -14,6 +14,11 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+.NewWindowIcon {
+  font-size: 1em;
+  margin-bottom: -3px;
+}
+
 .NewWindowIcon.is-large {
   font-size: 1.5em;
 }
